Fix z-index and refactor handle function

--- a/src/ui/units/dash/containers/Header/Header.scss
+++ b/src/ui/units/dash/containers/Header/Header.scss
@@ -14,6 +14,6 @@
         background: var(--g-color-base-background);
         position: sticky;
         top: 0;
-        z-index: 1000;
+        z-index: 101;
     }
 }
